--- a/src/global.css
+++ b/src/global.css
@@ -20,7 +20,7 @@
 
 :focus {
   outline: transparent;
-  box-shadow: 0 0 0 2px var(--green-500);
+  box-shadow: 0 0 0 2px var(--purple-dark);
 }
 
 * {
@@ -30,7 +30,7 @@
 }
 
 body {
-  background: var(--gray-900);
+  background: var(--gray-600);
   color: var(--gray-300);
   -webkit-font-smoothing: antialiased;
 }
@@ -41,5 +41,5 @@ textarea,
 button {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 0.875rem;
 }
