--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -18,6 +18,8 @@
   box-shadow: none;
 }
 
+
+
 .task input[type="radio"]{
   appearance: none;
   border: 1px solid var(--blue);
@@ -50,26 +52,30 @@
   border-radius: 50%;
 }
 
-.task p.isActive {
+.task > div {
+  display: flex;
+  flex: 1;
+}
+
+.task > div p {
+  word-wrap: break-word;
+  width: 90%;
+}
+
+.task > div p.isActive {
   text-decoration: line-through;
 }
 
 
 .task button {
-  position: absolute;
-  right: 1rem;
-  top: 1rem;
+  margin-left: 1rem;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-
   padding: 4px;
-
   background: transparent;
   color: var(--gray-300);
-
   line-height: 0;
-
   transition: background-color 0.1s;
 }
 
