--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,19 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 .wrapper {
   flex: 1;
-  padding: 0 16rem;
 
-  margin-top: calc((3rem * 0.5) * -1);
+  width: 768px;
+  max-width: 768px;
+
+  /* position: absolute;
+  top: calc((3rem + (3.125rem * 2)) - 27px); */
+  margin: 0 auto;
+  margin-top: -27px;
+
 }
 
 .wrapper form {
@@ -13,7 +24,7 @@
   gap: 0.5rem;
 }
 
-.wrapper form input {
+.wrapper form input[type="text"] {
   height: 100%;
   flex: 1;
   background-color: var(--gray-500);
@@ -54,22 +65,22 @@
   cursor: not-allowed;
 }
 
-.container {
-  margin-top: 3rem;
+.content {
+  margin-top: 4rem;
 }
 
-.container .header {
+.content .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.container .header div {
+.content .header div {
   display: flex;
   gap: 0.5rem;
 }
 
-.container .header div span:last-child {
+.content .header div span:last-child {
   background-color: var(--gray-400);
   color: var(--gray-200);
   padding: 0 0.5rem;
@@ -86,29 +97,30 @@
   color: var(--purple);
 }
 
-.content {
+.tasks {
   display: flex;
   flex-direction: column;
-  margin: 2rem 0;
+  margin: 1.5rem 0;
   gap: 0.75rem;
 }
 
 @media (max-width: 768px) {
   .wrapper {
+    max-width: 400px;
     padding: 0 2rem;
   }
 
-  .container {
-    margin-top: 1rem;
+  .content {
+    margin-top: 0.5rem;
   }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
   .wrapper {
-    padding: 0 8rem;
+    max-width: 640px;
   }
 
-  .container {
-    margin-top: 2rem;
+  .content {
+    margin-top: 1rem;
   }
 }
