--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -1,15 +1,16 @@
 .task {
   position: relative;
+
   display: flex;
   flex-direction: row;
-  flex: 1;
-  color: var(--gray-100);
+  align-items: flex-start;
   padding: 1rem;
-  background: var(--gray-500);
-
   border-radius: 8px;
 
-  align-items: flex-start;
+  flex: 1;
+
+  color: var(--gray-100);
+  background: var(--gray-500);
 
   box-shadow: 0px 2px rgba(0, 0, 0, 0.06);
 }
@@ -18,22 +19,30 @@
   box-shadow: none;
 }
 
-
-
-.task input[type="radio"]{
-  appearance: none;
-  border: 1px solid var(--blue);
+.task form {
   width: 1rem;
   height: 1rem;
+  margin-right: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  line-height: 0;
+}
+
+input[type="checkbox"]{
+  appearance: none;
+  border: 1px solid var(--blue) !important;
+  width: 100%;
+  height: 100%;
   content: none;
   outline: none;
   margin: 0;
   border-radius: 50%;
-  margin-right: 1rem;
   cursor: pointer;
 }
 
-.task input[type="radio"]:checked {
+input[type="checkbox"]:checked {
   appearance: none;
   outline: none;
   padding: 0;
@@ -41,8 +50,18 @@
   border: none;
 }
 
-.task input[type="radio"]:checked::before{
+input[type="checkbox"]:checked::before{
   position: absolute;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   color: var(--white) !important;
   content: "\00A0\2713\00A0" !important;
   background-color: var(--purple);
@@ -52,17 +71,14 @@
   border-radius: 50%;
 }
 
-.task > div {
-  display: flex;
-  flex: 1;
-}
-
-.task > div p {
+.task p {
   word-wrap: break-word;
-  width: 90%;
+  flex: 1;
+  margin-top: -2px;
+  line-height: 1.4;
 }
 
-.task > div p.isActive {
+.task p.isActive {
   text-decoration: line-through;
 }
 
